@@ -37,7 +37,6 @@ public class ServiceProxyFactoryBeanTest extends ServiceBaseTest {
 		fb = new OsgiServiceProxyFactoryBean();
 		fb.setBundleContext(bundleContext);
 		// execute retries fast
-		fb.setRetryTimes(1);
 		fb.setTimeout(1);
 		fb.setBeanClassLoader(getClass().getClassLoader());
 	}
